--- a/core/res/res/values/strings.xml
+++ b/core/res/res/values/strings.xml
@@ -5663,6 +5663,8 @@
     <string name="volume_dialog_ringer_guidance_vibrate">Calls and notifications will vibrate</string>
     <string name="volume_dialog_ringer_guidance_silent">Calls and notifications will be muted</string>
 
+    <string name="volume_control_hint">To adjust volume, enable CEC control(Settings > Display &amp; Sound > HDMI CEC) or adjust the TV remote control. </string>
+
     <!-- Title for the notification channel notifying user of settings system changes. [CHAR LIMIT=NONE] -->
     <string name="notification_channel_system_changes">System changes</string>
     <!-- Title for the notification channel notifying user of do not disturb system changes (i.e. Do Not Disturb has changed). [CHAR LIMIT=NONE] -->
